--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,7 @@
     <string name="configuracion">Configuración</string>
     <string name="estasSegurxQuieresCerrarSesion">¿Estás segur@ de que quieres cerrar sesión?</string>
     <string name="cerrarSesion">Cerrar sesión</string>
+    <string name="reproductorMusica">Reproductor de música</string>
 
     <!-- Cabecera -->
     <string name="nombre">Nombre</string>
@@ -208,5 +209,11 @@
     <string name="crear">Crear</string>
     <string name="eliminar">Eliminar</string>
     <string name="estasSegurxQuieresEliminarPersonaje">¿Estás segur@ de que quieres eliminar el personaje?</string>
+
+    <!-- Reproductor de música -->
+    <string name="cancionAmbiente">Canción Ambiente</string>
+    <string name="cancionTaberna">Canción Taberna</string>
+    <string name="cancionBatalla">Canción Batalla</string>
+    <string name="temporizador0">00:00:00</string>
 
 </resources>
