Arreglo de botones de 'Entrar' y 'Registrarse'. Correcciones de links en Configuración. Añadido botón 'Borrar cuenta' (sin funcionalidad) en Configuración. Política de datos y Condiciones de uso redactadas, hosteadas y añadidas. Limpieza de TODOs.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -199,6 +199,7 @@
     <string name="condicionesUso">Condiciones de uso</string>
     <string name="accedeApi">Accede a la API</string>
     <string name="cambiarContrasenya"><u>Cambiar contraseña</u></string>
+    <string name="eliminarCuenta"><u>Eliminar cuenta</u></string>
 
     <!-- Menú de personajes -->
     <string name="seleccionarPersonaje">Seleccionar personaje</string>
