Incorporado Borrar usuario y cargar configuracion de usuario (faltan pruebas). Modificaciones de Monturas y vehiculos a espera de crear otra clase java nueva

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -65,7 +65,7 @@
 
     <!-- Habilidades y Bonificadores -->
     <string name="inspiracion">Inspiration</string>
-    <string name="bonificadorCompetencia">Competence\n's bonus</string>
+    <string name="bonificadorCompetencia">Competence\'s bonus</string>
     <string name="tiradasSalvacion">Salvation\'s throws</string>
     <string name="habilidades">Skills</string>
     <string name="acrobacias">Acrobatics</string>
