Descartado API. Alineamientos pasados a FireBase (falta recogerlos). Arreglado bug donde petaba la app al cerrarla. Identificados varios bugs y anotados en TODOs.

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -122,7 +122,7 @@
     <string name="modificarMonedas">Modificar monedas</string>
 
     <!-- Combate -->
-    <string name="claseArmadura">Clase de armadura</string>
+    <string name="claseArmadura">Clase \n de armadura</string>
     <string name="iniciativa">Iniciativa</string>
     <string name="velocidad">Velocidad</string>
     <string name="puntosGolpeActuales">Puntos de golpe actuales:</string>
