--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -175,6 +175,7 @@
     <string name="lanzar">Throw!</string>
     <string name="uno" translatable="false">1</string>
     <string name="cuantosDadosQuieresLanzar">How many dice do you want to throw?</string>
+    <string name="cuantasCarasDado">¿How many sides per die do you want?</string>
 
     <!-- Valores -->
     <string name="menoscinco" translatable="false">-5</string>
