--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -175,6 +175,7 @@
     <string name="lanzar">¡Lanzar!</string>
     <string name="uno" translatable="false">1</string>
     <string name="cuantosDadosQuieresLanzar">¿Cuántos dados quieres lanzar?</string>
+    <string name="cuantasCarasDado">¿De cuantas caras quieres que sea el dado?</string>
 
     <!-- Valores -->
     <string name="menoscinco" translatable="false">-5</string>
